syntax = "proto3";
package dualitylabs.duality.dex;

option go_package = "github.com/duality-labs/duality/x/dex/types";
import "gogoproto/gogo.proto";
import "dualitylabs/duality/dex/trade_pair_id.proto";

message PoolReservesKey {
	TradePairID tradePairID = 1;           
	int64 TickIndexTakerToMaker = 2;
	uint64 Fee = 3;
}

message PoolReserves {
  PoolReservesKey key = 1;
  uint64 pool_id = 2;
  string reservesMakerDenom = 3 [
                 (gogoproto.moretags)   = "yaml:\"reservesMakerDenom\"",
                 (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
                 (gogoproto.jsontag) = "reservesMakerDenom",
                 (gogoproto.nullable)   = false
                 ];
  string priceTakerToMaker = 4 [
                (gogoproto.moretags)   = "yaml:\"priceTakerToMaker\"",
                (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
                (gogoproto.nullable)   = false,
                (gogoproto.jsontag) = "priceTakerToMaker"
                ];
  string priceOppositeTakerToMaker = 5 [
                (gogoproto.moretags)   = "yaml:\"priceOppositeTakerToMaker\"",
                (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
                (gogoproto.nullable)   = false,
                (gogoproto.jsontag) = "priceOppositeTakerToMaker"
                ];
}

